--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,48 +1,43 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
-  "architectural_notes": [],
+  "summary": "E-commerce application with product categories (Lehenga, Jewellery) and admin panel",
+  "architectural_notes": [
+    "Admin panel with full access control",
+    "Product categorization system (Lehenga, Jewellery)"
+  ],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-update-categoryfilter-component-to-display-lehenga-instead-of-gold-jewellery-as-a-filter-option",
-      "title": "Update CategoryFilter component to display 'Lehenga' instead of 'Gold Jewellery' as a filter option",
+      "id": "feature-add-jewellery-as-a-new-product-category-option-in-the-categoryfilter-component-alongside-existing-categories-all-sarees-western-dresses-lehenga",
+      "title": "Add 'Jewellery' as a new product category option in the CategoryFilter component alongside existing categories (All, Sarees, Western Dresses, Lehenga)",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-jewellery-as-a-category-option-in-the-productform-component-dropdown-for-adding-and-editing-products",
+      "title": "Add 'Jewellery' as a category option in the ProductForm component dropdown for adding and editing products",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-jewellery-category-card-to-the-home-page-category-preview-section-alongside-sarees-western-wear-and-lehenga-cards",
+      "title": "Add Jewellery category card to the Home page category preview section alongside Sarees, Western Wear, and Lehenga cards",
+      "reqIds": [
+        "REQ-4"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-productcard-component-to-include-jewellery-in-category-based-fallback-image-logic",
+      "title": "Update ProductCard component to include jewellery in category-based fallback image logic",
       "reqIds": [
         "REQ-5"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-update-productform-component-to-show-lehenga-as-a-category-option-in-the-dropdown-instead-of-gold-jewellery",
-      "title": "Update ProductForm component to show 'Lehenga' as a category option in the dropdown instead of 'Gold Jewellery'",
-      "reqIds": [
-        "REQ-6"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-update-adminproducts-page-to-display-lehenga-label-instead-of-gold-jewellery-in-the-category-column",
-      "title": "Update AdminProducts page to display 'Lehenga' label instead of 'Gold Jewellery' in the category column",
-      "reqIds": [
-        "REQ-7"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-update-home-page-collection-preview-section-to-show-lehenga-instead-of-jewellery",
-      "title": "Update Home page collection preview section to show 'Lehenga' instead of 'Jewellery'",
-      "reqIds": [
-        "REQ-8"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-update-productcard-fallback-image-logic-to-use-lehenga-specific-fallback-instead-of-gold-jewellery-fallback",
-      "title": "Update ProductCard fallback image logic to use lehenga-specific fallback instead of gold jewellery fallback",
-      "reqIds": [
-        "REQ-9"
       ],
       "version": 1
     }
@@ -50,14 +45,26 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Update the backend product category enum to replace 'goldJewellery' with 'lehenga'",
+      "summary": "Add full access admin panel",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Add Jewellery product category",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Update the backend ProductCategory enum in main.mo to include #jewellery variant",
       "reqIds": [
-        "REQ-4"
+        "REQ-3"
       ],
       "status": "pending"
     }
   ],
-  "projectName": "Change Gold Jewellery category to Lehenga",
+  "projectName": "E-commerce Admin",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
