#7: Finish build process and prepare Version 7 for testing
# Motivation
Completed the build: source code and specification document were written and coding finished. Version 7 is ready to test — next step is to verify that the admin panel is accessible and usable as expected.

# Changes
No changes planned.

Project: Koshambari
Draft version: 7

Co-authored-by: Caffeine <forge@caffeine.ai>

--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,54 +1,51 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
-  "architectural_notes": [],
-  "known_issues": [],
-  "isFixRequest": false,
-  "imageRequirements": "## Required Images\n- Elegant hero background image with Indian ethnic fashion theme featuring rich traditional textile patterns and warm colors (hero-background.dim_1920x1080.png)\n- Elegant saree display with flowing silk fabric in rich colors showcasing traditional Indian craftsmanship (category-sarees.dim_400x300.png)\n- Stylish western dress collection featuring modern silhouettes and contemporary designs (category-western-dresses.dim_400x300.png)\n- Ornate lehenga with intricate embroidery and embellishments in vibrant festive colors (category-lehenga.dim_400x300.png)\n- Exquisite traditional Indian jewellery set with gold accents and precious stones (category-jewellery.dim_400x300.png)\n- Beautiful saree with traditional motifs as product fallback image (fallback-sarees.dim_300x400.png)\n- Modern western dress as product fallback image with clean elegant styling (fallback-western-dresses.dim_300x400.png)\n- Stunning lehenga as product fallback image with decorative details (fallback-lehenga.dim_300x400.png)\n- Traditional jewellery pieces as product fallback image with intricate details (fallback-jewellery.dim_300x400.png)",
+  "summary": "Lehenga store application with admin panel access issues being addressed",
+  "architectural_notes": [
+    "Admin panel route needs verification and authentication setup review"
+  ],
+  "known_issues": [
+    "Admin panel access route unclear or authentication not properly configured"
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-generate-a-new-hero-section-background-image-with-an-elegant-indian-ethnic-fashion-theme-featuring-rich-colors-and-traditional-textile-patterns",
-      "title": "Generate a new hero section background image with an elegant Indian ethnic fashion theme featuring rich colors and traditional textile patterns",
+      "id": "feature-verify-and-document-the-exact-admin-panel-route-url-in-the-frontend-routing-configuration",
+      "title": "Verify and document the exact admin panel route URL in the frontend routing configuration",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-generate-attractive-category-preview-images-for-sarees-western-dresses-lehenga-and-jewellery-sections-on-the-home-page",
-      "title": "Generate attractive category preview images for Sarees, Western Dresses, Lehenga, and Jewellery sections on the home page",
+      "id": "feature-ensure-the-admin-panel-route-properly-checks-for-authentication-via-internet-identity-before-allowing-access",
+      "title": "Ensure the admin panel route properly checks for authentication via Internet Identity before allowing access",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-generate-fallback-product-images-for-each-category-sarees-western-dresses-lehenga-jewellery-to-replace-the-current-placeholder-images",
-      "title": "Generate fallback product images for each category (Sarees, Western Dresses, Lehenga, Jewellery) to replace the current placeholder images",
+      "id": "feature-verify-that-admin-privilege-verification-is-working-correctly-and-that-the-user-s-identity-is-properly-checked-against-the-admin-role-in-the-backend",
+      "title": "Verify that admin privilege verification is working correctly and that the user's identity is properly checked against the admin role in the backend",
       "reqIds": [
         "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-update-frontend-components-to-render-the-newly-generated-images-as-static-assets-from-frontend-public-assets-generated",
-      "title": "Update frontend components to render the newly generated images as static assets from frontend/public/assets/generated",
-      "reqIds": [
-        "REQ-4"
       ],
       "version": 1
     }
   ],
   "new_feature_requests": [
     {
-      "id": "AR-1",
-      "summary": "Replace all website images with attractive ones",
-      "reqIds": [],
+      "id": "AR-4",
+      "summary": "Add clear navigation link or button to the admin panel from the main navigation bar for authenticated admin users",
+      "reqIds": [
+        "REQ-4"
+      ],
       "status": "pending"
     }
   ],
-  "projectName": "Koshambari",
+  "projectName": "Koshambari Store",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
